--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -1,3 +1,10 @@
+/* apps/web/src/app/globals.css */
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap');
+
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,10 +14,9 @@
   --background-rgb: 255, 255, 255;
 }
 
+/* Default font */
 body {
+  font-family: 'Rubik', 'Poppins', sans-serif;
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
 }
-
-/* אם אתה רוצה להגדיר פונט גלובלי במקום הפונט שביקשת בשורה */
-@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
