--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -1,8 +1,7 @@
 /* apps/web/src/app/globals.css */
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap');
-
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap');*/
 
 
 @tailwind base;
